# Shader_MetaGenGrey

./: BaseDescs.h  CMakeLists.txt  DescriptorSetUTILS.cpp  IN_TypeDescriptors.h  README.md  ReflectedWrites.cpp  ScratchNotes.txt  TypeDescriptors.h  main.cpp  main.h
Boilerplate/: IN_DescSetLayouts.h
Output/: IN_DescSetLayoutHeader.h  IN_InputData.h
Shaders/: test_shader.frag  test_shader.vert  test_shader_split_ex.frag  test_shader_split_ex.vert
